# markra

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  README.zh-CN.md  bump.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml  generate-keys.yml  release.yml
apps/desktop/: package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/macos-locales/de.lproj/: InfoPlist.strings
apps/desktop/src-tauri/src/: external_urls.rs  image_upload.rs  language.rs  lib.rs  main.rs  markdown_files.rs  menu.rs  opened_files.rs  watcher.rs  web_http.rs  windows.rs
apps/desktop/src-tauri/src/menu_labels/: de.rs  en.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  pt_br.rs  ru.rs  zh_cn.rs  zh_tw.rs
scripts/release/: create-macos-open-helper.mjs  create-macos-open-helper.test.mjs  create-updater-metadata.mjs  create-updater-metadata.test.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  normalize-release-artifacts.mjs  normalize-release-artifacts.test.mjs  prepend-macos-unsigned-notice.mjs  prepend-macos-unsigned-notice.test.mjs  rebuild-macos-dmg-with-helper.mjs  rebuild-macos-dmg-with-helper.test.mjs  run-release.mjs
scripts/vite/: stripDebug.test.ts
src/: App.test.tsx  App.tsx  styles.css  styles.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: ai_http.rs  lib.rs  markdown_files.rs  menu.rs  watcher.rs  windows.rs
src-tauri/src/menu_labels/: de.rs  en.rs  es.rs  ja.rs  ko.rs  pt_br.rs  ru.rs  zh_tw.rs
src/components/: AiAgentPanel.test.tsx  AiAgentPanel.tsx  AiAgentProcessList.tsx  AiAgentSessionMenu.tsx  AiCommandBar.test.tsx  AiCommandBar.tsx  AiModelCapabilities.tsx  AiModelPicker.tsx  AiProviderBadge.tsx  AiProviderConnectionSection.lazy.test.tsx  AiProviderConnectionSection.test.tsx  AiProviderConnectionSection.tsx  AiProviderDetailHeader.tsx  AiProviderList.tsx  AiProviderModelsSection.tsx  AiProviderSettingsControls.tsx  AiProviderSettingsPanel.tsx  AppToaster.tsx  ImagePreview.tsx  MarkdownFileTreeDrawer.tsx  (+9 more)
(+288 files in other folders)
